--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Kalyan3081/Portfolio-",
+  "homepage": "https://kalyan3081.github.io/Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
